Changes main page from PuppyShelter to Kitty Kindergarden

--- a/vagrant/catalog/puppies/templates/index.html
+++ b/vagrant/catalog/puppies/templates/index.html
@@ -2,7 +2,7 @@
 <html lang='pt'>
 
     <head>
-        <title>Puppy Shelter Village </title>
+        <title>Kitty KinderGarden</title>
         <link href='static/css/bootstrap.css' rel='stylesheet'>
         <link href='static/css/village.css' rel='stylesheet'>
     </head>
@@ -19,22 +19,23 @@
           <div class='container'>
             <div class='row'>
               <div class='col-md-12 col-sm-12' id='branding'>
-                Puppy Shelter Village
+                Kitty KinderGarden
               </div>
             </div>
-            <div class='jumbotron' id='main_picture'>
+            <div class='jumbotron' id='main_picture' style='background-image: url("http://placekitten.com/1024/350")'>
                 <div id='filler'></div>
-                <h2>Foto bonitinha de um caozinho</h2>
+                <h2>Welcome to the kitty kindergarden!</h2>
+                <p> Help us, adopt a baby cat!</p>
             </div>
             <div class="row">
-              <div class="col-md-4 col-sm-4">
-                <a href='puppies/list'><p id='puppies'>Our Puppies</p></a>
+              <div class="col-md-4 col-sm-4" >
+                <a href='puppies/list'><p id='puppies' style='background-image: url("http://placekitten.com/524/350")'>Our Kitten</p></a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href='owners/list'><p id='puppies'>Happy Owners</p></a>
+                <a href='owners/list'><p id='puppies' style='background-image: url("http://placekitten.com/522/360")'>Happy Owners</p></a>
               </div>
-              <div class="col-md-4 col-sm-4">
-                <a href='shelters/list'><p id='puppies'>Our Shelters</p></a>
+              <div class="col-md-4 col-sm-4" >
+                <a href='shelters/list'><p id='puppies' style='background-image: url("http://placekitten.com/554/356")'>Our Shelters</p></a>
               </div>
             </div>
           </div>
