--- a/vagrant/catalog/puppies/templates/puppies_edit.html
+++ b/vagrant/catalog/puppies/templates/puppies_edit.html
@@ -2,7 +2,7 @@
 
 <html lang='pt'>
 <head>
-  <title>Adding puppies</title>
+  <title>Edit puppies</title>
   <link href='{{url_for('static', filename='css/bootstrap.css')}}' rel='stylesheet'>
   <link href='{{url_for('static', filename='css/village.css')}}' rel='stylesheet'>
 </head>
@@ -12,7 +12,8 @@
     <div class='container-fluid'>
       <div class='navbar-header'>
         <a class='navbar-brand' href='{{url_for('index')}}'>Puppy Shelter Village</a>
-        <a class='navbar-brand' href='{{url_for('list_view', list_type=list_type )}}'  >\Add Puppies</a>
+        <a class='navbar-brand' href='{{url_for('list_view', list_type=list_type )}}'  >\Edit Puppies</a>
+        <a class='navbar-brand' href='{{url_for('item_view', list_type=list_type, item_id=item_id)}}'  >\{{item.Puppy.name}}</a>
       </div>
     </div>
   </nav>
@@ -22,15 +23,15 @@
     <div class='col-md-10 col-sm-9 main'>
       <div class='row'>
         <div class='col-md-8 col-sm-8' id='profile'>
-          <h1>Adding a new cat</h1>
-              <form method='POST' enctype='multipart/form-data' action='{{url_for('item_new', list_type='puppies')}}'>
+          <h1>Editing a new cat</h1>
+              <form method='POST' enctype='multipart/form-data' action='{{url_for('item_edit', list_type='puppies')}}'>
                   <h2>Insert info about the recently arrived cat</h2>
-                  Name: <input name="name" type="text" ><br>
-                  Date of Birth: <input name="dateOfBirth" type="date" ><br>
+                  Name: <input name="name" type="text" placeholder="{{item.name}}"><br>
+                  Date of Birth: <input name="dateOfBirth" type="date" placeholder="{{item.dateOfBirth}}"><br>
                   <!-- TODO set combo box here -->
-                  Gender: <input name="gender" type="text" ><br>
-                  Weight: <input name="weight" type="number" ><br>
-                  Picture link: <input name="link" type="text" >
+                  Gender: <input name="gender" type="text" placeholder="{{item.gender}}"><br>
+                  Weight: <input name="weight" type="number" placeholder="{{item.weight}}"><br>
+                  Picture link: <input name="link" type="text" placeholder="{{item.link}}">
                   Is he in a shelter? If so, which? <input name="shelter" list='all_shelters' >
                     <datalist id='all_shelters'>
                       {% for item in shelters %}
@@ -38,7 +39,7 @@
                       {% endfor %}
                     </datalist>
                   <input type="submit" value="Submit">
-                  <a href="{{url_for('list_view', list_type='puppies')}}">Cancel</a>
+                  <a href="{{url_for('item_view', list_type=list_type, item_id=item_id)}}">Cancel</a>
               </form>
         </div>
       </div>
