--- a/vagrant/catalog/puppies/templates/shelters_edit.html
+++ b/vagrant/catalog/puppies/templates/shelters_edit.html
@@ -30,7 +30,7 @@
                   Address: <input name="address" type="text" placeholder='{{item.address}}'><br>
                   City: <input name="city" type="text" placeholder='{{item.city}}'><br>
                   State: <input name="state" type="text" placeholder='{{item.state}}'><br>
-                  Zip Code: <input name="zipCode" type="text" placeholder='{{item.zipCode}}'>
+                  Zip Code: <input name="zipCode" type="text" placeholder='{{item.zipCode}}'><br>
                   Website: <input name="website" type='text' placeholder='{{item.website}}' >
                   <input type="submit" value="Submit">
                   <a href="{{url_for('item_view', list_type=list_type, item_id=item_id)}}">Cancel</a>
