--- a/vagrant/catalog/puppies/templates/item_delete.html
+++ b/vagrant/catalog/puppies/templates/item_delete.html
@@ -23,7 +23,7 @@
       <div class='row'>
         <div class='col-md-8 col-sm-8' id='profile'>
           <h1>Delete item</h1>
-              <form method='POST' enctype='multipart/form-data' action='{{url_for('item_delete', list_type=list_type)}}'>
+              <form method='POST' enctype='multipart/form-data' action='{{url_for('item_delete', list_type=list_type, item_id=item_id)}}'>
                   <h2>Are you sure to delete {{item.name}}, id number {{item.id }} from {{list_type}} table?</h2>
                   <input type="submit" value="Delete">
                   <a href="{{url_for('list_view', list_type=list_type)}}">Cancel</a>
