--- a/vagrant/catalog/puppies/templates/shelter_view.html
+++ b/vagrant/catalog/puppies/templates/shelter_view.html
@@ -50,8 +50,8 @@
               </form> -->
           <ul class="nav nav-sidebar">
              <li class="active"><a href="#">Subscription<span class="sr-only"></span></a></li>
-             <li><a href="#">Edit</a></li>
-             <li><a href="#">Delete</a></li>
+             <li><a href="{{url_for('item_edit', list_type=list_type, item_id=item_id)}}">Edit</a></li>
+             <li><a href="{{url_for('item_delete', list_type=list_type, item_id=item_id)}}">Delete</a></li>
           </ul>
         </div>
     </div>
