--- a/vagrant/catalog/puppies/static/css/village.css
+++ b/vagrant/catalog/puppies/static/css/village.css
@@ -6,12 +6,13 @@
 
 #branding {
     font-size: 40px;
+    border-bottom: 2px solid #000000;
 }
 
 .container {
     max-width: 1024px;
     margin-bottom: 50px;
-    padding-top: 80px;
+    padding-top: 20px;
 }
 
 #main_picture {
@@ -48,12 +49,12 @@
 }
 
 #top {
-    background-color: forestgreen;
-    color:lightcoral;
+    background-color: #2ECA98;
+    color: #7D1C03;
 }
 #top a{
     margin:2px;
-    color:lightcoral;
+    color:#7D1C03;
     padding-left:0px;
     padding-right: 0px;
 }
@@ -63,7 +64,7 @@
 }
 
 .list {
-    background-color: dimgray;
+    background-color: #107D5B;
     border-radius: 8px;
     padding-top: 5px;
     align-content: center;
@@ -106,20 +107,39 @@
     width: 100%;
     padding-left: 20px;
     padding-top: 20px;
-}
-
-#button {
-    border-radius: 8px;
-    background-color:darkolivegreen;
-    padding: 10px;
     text-align: center;
 }
-#button a{
-    color:aliceblue;
-}
+
 
 #profile-pic {
     padding: 5px;
     border-radius: 5%;
     height: 230px;
+}
+
+.index {
+    padding-top: 0px;
+}
+
+#index-pic {
+    padding-top: 20px;
+}
+
+#index-top {
+    background-color: #107D5B;
+}
+
+
+
+#mybar{
+    text-align: center;
+}
+
+.button {
+    background-color: #2ECA98;
+    border-radius: 4px;
+    color: black;
+}
+.button:hover {
+    background-color: #53FFC8;
 }
