--- a/vagrant/catalog/puppies/templates/index.html
+++ b/vagrant/catalog/puppies/templates/index.html
@@ -7,7 +7,7 @@
         <link href='static/css/village.css' rel='stylesheet'>
     </head>
 
-    <body>
+    <body class='index'>
         <nav class='navbar navbar-fixed-top'>
             <div class='container-fluid'>
               <div class='navbar-right'>
@@ -16,7 +16,7 @@
             </div>
           </nav>
 
-          <div class='container'>
+          <div class='container' id='index-pic'>
             <div class='row'>
               <div class='col-md-12 col-sm-12' id='branding'>
                 Kitty KinderGarden
