--- a/vagrant/catalog/puppies/templates/list_view.html
+++ b/vagrant/catalog/puppies/templates/list_view.html
@@ -67,8 +67,8 @@
 
     <div class='col-md-2 col-sm-3'>
 
-      <a href="#" class='btn'>Login</a>
-      <a href='{{url_for('item_new', list_type = list_type)}}'>Add</a>
+
+
       <!-- HIDDEN   <form class="navbar-form navbar-right" id='user-connection'>
             Login: <input type="text" class="form-control" placeholder="login">
             Password:<input type="text" class="form-control" placeholder="password">
@@ -80,6 +80,8 @@
          -->
       <!-- TODO Add to css a .hover class so that it is hidden when not hover and auto when on hover -->
       <ul class="nav nav-sidebar" style='max-height:300px; overflow:auto;'>
+        <li>  <a href="#" class='button'>Login</a></li>
+        <li><a href='{{url_for('item_new', list_type = list_type)}}'>Add</a></li>
         {% for each in alphabet %}
          <li><a href=
            {% if list_type == 'puppies' %}
