Refactors Puppy Project for packaging

--- a/vagrant/catalog/puppies/puppies/templates/shelter_view.html
+++ b/vagrant/catalog/puppies/puppies/templates/shelter_view.html
@@ -52,6 +52,7 @@
              <li class="active"><a href="#">Subscription<span class="sr-only"></span></a></li>
              <li><a href="{{url_for('item_edit', list_type=list_type, item_id=item_id)}}">Edit</a></li>
              <li><a href="{{url_for('item_delete', list_type=list_type, item_id=item_id)}}">Delete</a></li>
+             <li><a href="{{url_for('balance_population')}}">Balance Population</a> </li>
           </ul>
         </div>
     </div>
