--- a/vagrant/catalog/puppies/puppies/templates/owners_add.html
+++ b/vagrant/catalog/puppies/puppies/templates/owners_add.html
@@ -23,13 +23,20 @@
       <div class='row'>
         <div class='col-md-8 col-sm-8' id='profile'>
           <h1>Adding an Owner</h1>
+          {% from "_form_helpers.html" import render_field %}
               <form method='POST' enctype='multipart/form-data' action='{{url_for('item_new', list_type='owners')}}'>
                   <h2>Insert info about the person</h2>
-                  Name: <input name="name" type="text" ><br>
+                  <dl>
+                    {{ render_field(form.name) }}
+                    {{ render_field(form.surname) }}
+                    {{ render_field(form.gender) }}
+                    {{ render_field(form.age) }}                    
+                  </dl>
+<!--                  Name: <input name="name" type="text" ><br>
                   Surname: <input name="surname" type="text" ><br>
-                  <!-- TODO ad combobox here -->
+
                   Gender: <input name="gender" type="text" ><br>
-                  Age: <input name="age" type="number" ><br>
+                  Age: <input name="age" type="number" ><br> -->
                   <input type="submit" value="Submit">
                   <a href="{{url_for('list_view', list_type='owners')}}">Cancel</a>
               </form>
