--- a/vagrant/catalog/puppies/puppies/templates/item_view.html
+++ b/vagrant/catalog/puppies/puppies/templates/item_view.html
@@ -27,6 +27,17 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 col-sm-9 main'>
+      <!--MESSAGE FLASHING EXAMPLE -->
+          {% with messages = get_flashed_messages() %}
+              {% if messages %}
+
+              <ul>
+              {% for message in messages %}
+                <li><strong>{{message}}</strong></li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+          {% endwith %}
       <div class='row'>
         {% if list_type == puppies %}
         <div class='col-md-4 col-sm-4'>
