--- a/vagrant/catalog/puppies/puppies/templates/list_view.html
+++ b/vagrant/catalog/puppies/puppies/templates/list_view.html
@@ -26,6 +26,17 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 col-sm-9 main' id='viewing-list'>
+      <!--MESSAGE FLASHING EXAMPLE -->
+          {% with messages = get_flashed_messages() %}
+              {% if messages %}
+
+              <ul>
+              {% for message in messages %}
+                <li><strong>{{message}}</strong></li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+          {% endwith %}
       <div class='row'>
       {% for item in items %}
               {% if list_type=='puppies' and item.owner_id is none %}
